July 13 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Oceans and the dolphin pool are now animated
	* Decreased the global frame rate somewhat
	* Macro system tweaks
	* Corrected a bug in the temporary life saving code
	* Reversed the order of the message history
	* Corrected some bugs in the message history code, but not all of them
	* Corrected a minor problem with database Aliases

July 12 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected many warnings given by gcc 3.04 compilation
	* Personal pronouns are now correct while looking at far away people while SeeWholeMapCheat is on
	* Dolphins are now rotated and mirrored randomly every turn, which makes them seem more playful
	* The second sentence of the kamikaze dwarf hymn message now starts correctly with an uppercase letter
	* Macro system is yet again a bit shorter and more elegant
	* Removed the unused function definitions of charde.h
	* Bodypart pictures of farmers and housewives are again randomized correctly
	* The flower color of the carnivorous plant is again randomized correctly
	* Adjusted brightness levels of many bodyparts in humanoid.pcx
	* Made some tiny corrections to the graphics in humanoid.pcx and char.pcx
	  (for instance, enner beasts mouth is again black and white, not m-color 1 and white)
	* Corrected all buggy bodypart BitmapPoses
	* Fixed all IMO ugly bodypart colors
	* There was also an attempt to optimize the level generation; as a result it's now somewhat slower
	* Stretchblit is now masked (I needed this feature for IGOR 1.20 that now includes a CW-like draw queue system)
	* Added colorizablebitmap::Roll(), which is able to simultaneously move the contents of a given rectangle
	  by an arbitrary amount of pixels horizontally and/or vertically so that the clipped pixels appear on the
	  opposite side (also needed for IGOR 1.20 as an option)
	* Added #defines for the eight direction keys to felibdef.h
	* Corrrected a typo in the monster polymorph message