@@ -36,7 +36,7 @@
 #define SATIATED 3
 #define BLOATED 4
 
-#define STATES 10
+#define STATES 13
 
 #define POLYMORPHED 1
 #define HASTE 2
@@ -48,6 +48,9 @@
 #define INFRAVISION 128
 #define ESP 256
 #define POISONED 512
+#define TELEPORT 1024
+#define POLYMORPH 2048
+#define TELEPORT_CONTROL 4096
 
 #define HEAD 1
 #define TORSO 2
@@ -375,6 +378,10 @@
 #define RINGOFFIRERESISTANCE 1
 #define RINGOFPOLYMORPHCONTROL 2
 #define RINGOFINFRAVISION 3
+#define RINGOFTELEPORTATION 4
+#define RINGOFTELEPORTCONTROL 5
+#define RINGOFPOLYMORPH 6
+
 
 #define AMULETOFLIFESAVING 1
 #define AMULETOFESP 2
